--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,17 +32,17 @@ jobs:
           docker push $IMAGE_URI
 
       - name: Render ECS Task Definition
+        id: render-task-def
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
           task-definition: node-app-task.json
           container-name: test-node-app
           image: ${{ env.IMAGE_URI }}
-          output: rendered-task-definition.json
-
+          
       - name: Deploy to ECS
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
-          task-definition: rendered-task-definition.json
+          task-definition: ${{ steps.render-task-def.outputs.task-definition }}
           service: ${{ secrets.SERVICE_NAME }}
           cluster: ${{ secrets.CLUSTER_NAME }}
           wait-for-service-stability: true
