--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,42 +1,40 @@
-name: CI/CD to ECS
+name: Deploy to Amazon ECS
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main   # jab main branch me push hoga tab chalega
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout repo
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - name: Checkout source
+        uses: actions/checkout@v4
 
-      # 2️⃣ Configure AWS Credentials
-      - name: Configure AWS
+      - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ap-south-1   # 👈 yaha hardcode kar diya (best for now)
+          aws-region: ap-south-1
 
-      # 3️⃣ Login to Amazon ECR
       - name: Login to Amazon ECR
+        id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
-      # 4️⃣ Build & Push Docker Image
-      - name: Build and Push Docker Image
+      - name: Build, Tag, and Push Docker image
         run: |
-          IMAGE_URI=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.ap-south-1.amazonaws.com/node-repo1:latest
-          echo "IMAGE_URI=$IMAGE_URI"
+          IMAGE_URI=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.ap-south-1.amazonaws.com/ecr-repo:latest
+          echo "Building image: $IMAGE_URI"
           docker build -t $IMAGE_URI .
           docker push $IMAGE_URI
 
-      # 5️⃣ Update ECS Service (Redeploy with new image)
-      - name: Deploy to ECS
-        run: |
-          aws ecs update-service \
-            --cluster my-ecs-cluster \
-            --service my-ecs-service \
-            --force-new-deployment
+      - name: Update ECS Service
+        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+        with:
+          task-definition: ecs-task-def.json   # yeh tumhare repo me hona chahiye
+          service: my-ecs-service
+          cluster: my-ecs-cluster
+          wait-for-service-stability: true
