--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to Amazon ECS
 on:
   push:
     branches:
-      - main   # jab main branch me push hoga tab chalega
+      - main   
 
 jobs:
   deploy:
