--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,10 +31,10 @@ jobs:
           docker build -t $IMAGE_URI .
           docker push $IMAGE_URI
 
-      - name: Update ECS Service
-        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
-        with:
-          task-definition: ecs-task-def.json   # yeh tumhare repo me hona chahiye
-          service: my-ecs-service
-          cluster: my-ecs-cluster
-          wait-for-service-stability: true
+      - name: Deploy to ECS
+        run: |
+         aws ecs update-service \
+         --cluster node-cluster-app \
+         --service my-task-service \
+          --force-new-deployment
+
