--- a/.github/workflows/deploy1.yml
+++ b/.github/workflows/deploy1.yml
@@ -39,7 +39,7 @@ jobs:
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
           task-definition: task_df.json     # local task definition file
-          service: my-ecs-service                 # ECS service name
-          cluster: my-ecs-cluster                 # ECS cluster name
+          service: my-task-service                 # ECS service name
+          cluster: new-node-cluster                  # ECS cluster name
           wait-for-service-stability: true
           image: $ECR_REGISTRY/${{ secrets.ECR_REPOSITORY }}:$IMAGE_TAG
