--- a/.github/workflows/deploy1.yml
+++ b/.github/workflows/deploy1.yml
@@ -43,3 +43,11 @@ jobs:
           cluster: new-node-cluster                  # ECS cluster name
           wait-for-service-stability: true
           image: $ECR_REGISTRY/${{ secrets.ECR_REPOSITORY }}:$IMAGE_TAG
+
+      - name: Deploy to ECS
+        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+        with:
+          task-definition: ecs-task-def-updated.json
+          service: my-task-service
+          cluster: new-node-cluster
+          wait-for-service-stability: true
