--- a/.github/workflows/deploy1.yml
+++ b/.github/workflows/deploy1.yml
@@ -41,7 +41,7 @@ jobs:
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
           task-definition: task_df.json
-          container-name: my-container
+          container-name:  new-node-container 
           image: ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPOSITORY }}:${{ github.sha }}
 
 
