--- a/.github/workflows/deploy1.yml
+++ b/.github/workflows/deploy1.yml
@@ -25,14 +25,11 @@ jobs:
 
       # 4️⃣ Build & Push Docker image (script)
       - name: Build and Push Docker Image
-        run: |
-          IMAGE_TAG=${{ github.sha }}
-          ECR_REGISTRY=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com
-          IMAGE_URI=$ECR_REGISTRY/${{ secrets.ECR_REPOSITORY }}:$IMAGE_TAG
-
-          docker build -t $ECR_REGISTRY/${{ secrets.ECR_REPOSITORY }}:latest -t $IMAGE_URI .
-          docker push $ECR_REGISTRY/${{ secrets.ECR_REPOSITORY }}:latest
-          docker push $IMAGE_URI
+        uses: aws-actions/amazon-ecr-build-and-push-image@v2
+        with:
+          repository: ${{ secrets.ECR_REPOSITORY }}      # ECR repository name
+          image-tag: ${{ github.sha }}                  # unique tag
+          region: ${{ secrets.AWS_REGION }}
 
      
       
